--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
     <modules>
         <module>chapter2</module>
-      <module>Chapter3</module>
+        <module>chapter3</module>
     </modules>
     <name>head-first-java</name>
   <url>http://maven.apache.org</url>
